修改页面居中

--- a/20200507/index.html
+++ b/20200507/index.html
@@ -6,7 +6,8 @@
     <title>Hi (・̀ᴗ・́)و</title>
   </head>
   <body>
-    <script src="sketch.js"></script>
+  <p align="center"><script src="sketch.js"></script></p>
+
   
 
 </body></html>
