--- a/20200507/index.html
+++ b/20200507/index.html
@@ -6,7 +6,7 @@
     <title>Hi (・̀ᴗ・́)و</title>
   </head>
   <body>
-  <p align="center"><script src="sketch.js"></script></p>
+  <p><script src="sketch.js"></script></p>
 
   
 
