--- a/20200507/index.html
+++ b/20200507/index.html
@@ -6,8 +6,7 @@
     <title>Hi (・̀ᴗ・́)و</title>
   </head>
   <body>
-  <p><script src="sketch.js"></script></p>
-
+    <script src="sketch.js"></script>
   
 
 </body></html>
