--- a/20200507/index.html
+++ b/20200507/index.html
@@ -4,9 +4,20 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <title>Hi (・̀ᴗ・́)و</title>
+    <style type="text/css">
+    .container{
+      margin:0 auto;
+      width:800px;
+    }
+    #scene{
+      border:1px solid black;
+    }
+  </style>
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <div class="container">
+      <script src="sketch.js"></script>
+    </div>
   
 
 </body></html>
