--- a/20200507/index.html
+++ b/20200507/index.html
@@ -4,20 +4,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <title>Hi (・̀ᴗ・́)و</title>
-    <style type="text/css">
-    .container{
-      margin:0 auto;
-      width:800px;
-    }
-    #scene{
-      border:1px solid black;
-    }
-  </style>
+    <style>
+      .p5Canvas {
+        width: 100% !important;
+        height: 100% !important;
+      }
+    </style>
   </head>
   <body>
-    <div class="container">
-      <script src="sketch.js"></script>
-    </div>
+    <center><script src="sketch.js"></script></center>
   
 
 </body></html>
